Add header, promo bar, and hero section styling

--- a/index.html
+++ b/index.html
@@ -11,3 +11,31 @@
     <p>Struktur awal proyek sudah siap.</p>
 </body>
 </html>
+<header class="main-header">
+    <div class="logo">
+        <span class="icon">🐦</span> BirdShop
+    </div>
+    <nav class="main-nav">
+        <a href="#" class="active">Beranda</a>
+        <a href="#">Produk</a>
+        <a href="#">Kategori</a>
+        <a href="#">Tentang Kami</a>
+        <a href="#">Kontak</a>
+    </nav>
+    <div class="header-actions">
+        <input type="text" placeholder="Cari burung...">
+        <button class="cart-btn">🛒 <span>0</span></button>
+    </div>
+</header>
+
+<div class="promo-bar">
+    <p>⭐ Promo Spesial! Gratis Ongkir untuk pembelian di atas Rp 500.000</p>
+</div>
+
+<section class="hero-section">
+    <div class="hero-content">
+        <h1>Burung Berkualitas untuk Anda</h1>
+        <p>Temukan burung pilihan terbaik dengan harga terjangkau dan kualitas terpercaya</p>
+        <a href="#products" class="btn primary-btn">Lihat Koleksi</a>
+    </div>
+</section>
