Add main website footer

--- a/index.html
+++ b/index.html
@@ -39,3 +39,32 @@
         <a href="#products" class="btn primary-btn">Lihat Koleksi</a>
     </div>
 </section>
+<footer class="main-footer">
+    <div class="container footer-grid">
+        <div class="footer-col">
+            <h3>🐦 BirdShop</h3>
+            <p>Toko burung online terpercaya dengan koleksi lengkap dan kualitas terbaik.</p>
+        </div>
+        <div class="footer-col">
+            <h4>Navigasi</h4>
+            <ul>
+                <li><a href="#">Beranda</a></li>
+                <li><a href="#">Produk</a></li>
+                <li><a href="#">Kategori</a></li>
+                <li><a href="#">Tentang Kami</a></li>
+            </ul>
+        </div>
+        <div class="footer-col">
+            <h4>Layanan</h4>
+            <ul>
+                <li><a href="#">Cara Pemesanan</a></li>
+                <li><a href="#">Pengiriman</a></li>
+                <li><a href="#">Garansi</a></li>
+                <li><a href="#">FAQ</a></li>
+            </ul>
+        </div>
+    </div>
+    <div class="copyright">
+        &copy; 2025 BirdShop. All Rights Reserved.
+    </div>
+</footer>
