--- a/index.html
+++ b/index.html
@@ -65,6 +65,6 @@
         </div>
     </div>
     <div class="copyright">
-        &copy; 2025 BirdShop. All Rights Reserved.
+        &copy; Ica Asri Lestari. All Rights Reserved.
     </div>
 </footer>
