Commit 10.1: Fix and finalize all navigation links across all pages

--- a/index.html
+++ b/index.html
@@ -16,8 +16,8 @@
             <a href="index.html" class="active">Beranda</a>
             <a href="#products">Produk</a>
             <a href="#">Kategori</a>
-            <a href="about.html">Tentang Kami</a> <a href="#">Kontak</a>
-        </nav>
+            <a href="about.html">Tentang Kami</a>
+            <a href="contact.html">Kontak</a> </nav>
         <div class="header-actions">
             <input type="text" placeholder="Cari burung...">
             <button class="cart-btn">🛒 <span>0</span></button>
@@ -101,7 +101,8 @@
                     <li><a href="index.html">Beranda</a></li>
                     <li><a href="#products">Produk</a></li>
                     <li><a href="#">Kategori</a></li>
-                    <li><a href="about.html">Tentang Kami</a></li> </ul>
+                    <li><a href="about.html">Tentang Kami</a></li>
+                </ul>
             </div>
             <div class="footer-col">
                 <h4>Layanan</h4>
