Commit 10.3: Fix navigation link to contact.html in about page

--- a/about.html
+++ b/about.html
@@ -17,8 +17,7 @@
             <a href="#">Produk</a>
             <a href="#">Kategori</a>
             <a href="about.html" class="active">Tentang Kami</a>
-            <a href="#">Kontak</a>
-        </nav>
+            <a href="contact.html">Kontak</a> </nav>
         <div class="header-actions">
             <input type="text" placeholder="Cari burung...">
             <button class="cart-btn">🛒 <span>0</span></button>
@@ -79,6 +78,7 @@
                     <li><a href="#">Produk</a></li>
                     <li><a href="#">Kategori</a></li>
                     <li><a href="about.html">Tentang Kami</a></li>
+                    <li><a href="contact.html">Kontak</a></li> 
                 </ul>
             </div>
             <div class="footer-col">
